# rte-rrtmgp-cpp

./: CMakeLists.txt
allsky/: allsky_init.py  make_links.sh
data/: mie_lut_ice.nc  rrtmgp-clouds-sw-Fu.nc
include/: cloud_optics.h
include_rt/: Cloud_optics_rt.h  Raytracer.h  cloud_optics_rt.h  raytracer_bw.h  raytracer_definitions.h  raytracer_functions.h  raytracer_lw.h
include_rt_kernels/: gas_optics_rrtmgp_kernels_cuda_rt.h  raytracer_kernels.h  raytracer_kernels_bw.h  raytracer_kernels_lw.h  raytracer_kernels_sw.h
include_test/: Radiation_solver.h  Radiation_solver_rt.h  netcdf_interface.h  radiation_solver_rt.h
include_tilt/: tilt_utils.h
les_cloudfield/: test.ini  test_plot.py
lw_case_to_chiel/: plot_3dlw.py
python/: image_from_xyz.py
rcemip/: make_links.sh  test_rcemip_input.py  test_rcemip_input_rt.py
rfmip/: make_links.sh  rfmip_init.py
src/: cloud_optics.cpp
src_cuda/: cloud_optics.cu
src_cuda_rt/: Cloud_optics_rt.cu  Raytracer.cu  Raytracer_bw.cu  aerosol_optics_rt.cu  cloud_optics_rt.cu  raytracer_bw.cu  raytracer_lw.cu  raytracer_sw.cu  rte_lw_rt.cu
src_kernels_cuda/: rte_solver_kernels.cu
src_kernels_cuda_rt/: CMakeLists.txt  gas_optics_rrtmgp_kernels_launchers_rt.cu  gas_optics_rrtmgp_kernels_rt.cu  raytracer_kernels.cu  raytracer_kernels_bw.cu  raytracer_kernels_lw.cu  raytracer_kernels_sw.cu  rte_solver_kernels_rt.cu
src_test/: CMakeLists.txt  Radiation_solver.cu  Radiation_solver_rt.cu  radiation_solver.cpp  radiation_solver.cu  radiation_solver_bw.cu  (+6 more)
src_tilt/: CMakeLists.txt  tilt_utils.cpp  tilt_utils.cu
